# CoentroVPN

./: .dockerignore  .gitignore  AGENTS.md  BOOKS.md  CHANGELOG.md  Cargo.toml  Config.toml  DEVELOPMENT.md  DOCKER.md  Dockerfile  LICENSE  README.md  config.modified.toml  config.server.toml  config.toml  docker-compose.distroless.yml  docker-compose.yaml  metrics.md  tuf.txt
.github/workflows/: release.yml  rust.yml
cli_client/: Cargo.toml
cli_client/src/: cli.rs  main.rs
coentro_client/: Cargo.toml
coentro_client/src/: helper_comms.rs  main.rs  tun_handler.rs
coentro_helper/: Cargo.toml
coentro_helper/src/: ipc_handler.rs  lib.rs  main.rs  sleep_monitor.rs
coentro_helper/src/network_manager/: linux.rs  macos.rs  mod.rs
coentro_helper/tests/: linux_dns.rs  linux_tun.rs
coentro_ipc/: Cargo.toml
coentro_ipc/src/: lib.rs  messages.rs  transport.rs
coentro_server_helper/: Cargo.toml
coentro_server_helper/src/: lib.rs  main.rs  persistence.rs
coentro_server_helper/src/ipc/: auth.rs  messages.rs  mod.rs  transport.rs
coentro_server_helper/src/network/: linux.rs  macos.rs  mod.rs
coentroctl/: Cargo.toml
coentroctl/src/: main.rs
core_engine/: Cargo.toml
core_engine/src/: bridge.rs  helper_client.rs  ipam.rs  main.rs  session.rs  tunnel.rs
dashboard/: Dockerfile  package-lock.json  package.json  server_helper.json
deploy/server_helper/kubernetes/: server-helper-daemonset.yaml
deploy/server_helper/launchd/: com.coentro.server-helper.plist
deploy/server_helper/systemd/: coentro-server-helper.service
docker/production/: Dockerfile.client  Dockerfile.server
docker/test/: Dockerfile.client  Dockerfile.helper  README.md  docker-compose.yml  test_advanced.sh  test_fd_passing.sh  test_fd_passing_docker.sh  test_tunnel.sh
docs/: COMPREHENSIVE_GUIDE.md  MACOS_LAUNCHD_INTEGRATION.md  architecture.md  docker_testing.md  helper_installation.md  macos_testing.md
gui_client/: Cargo.toml
gui_client/src/: main.rs
management_api/: Cargo.toml  Dockerfile
management_api/src/: main.rs
scripts/: co.coentrovpn.helper.plist  docker-deploy.sh  fix_socket_permissions.sh  install_helper.sh  install_helper_macos.sh  install_helper_macos_direct.sh  macos_smoke_test.sh  test_auth_macos.sh  test_fd_passing_macos.sh  test_launchd_integration.sh  test_psk_auth.sh  test_tun_macos.sh
shared_utils/: Cargo.toml  README.md
shared_utils/benches/: aes_gcm_benchmark.rs  framing_benchmark.rs
shared_utils/examples/: config_example.rs  e2e_test.rs  framing_test.rs  quic_example.rs  run_client.rs  run_server.rs  stress_test.rs
shared_utils/fuzz/: Cargo.toml
shared_utils/fuzz/fuzz_targets/: framing.rs
shared_utils/src/: lib.rs  main.rs
shared_utils/src/config/: config.rs  mod.rs
shared_utils/src/crypto/: aes_gcm.rs
shared_utils/src/logging/: mod.rs
shared_utils/src/proto/: auth.rs  framing.rs  mod.rs
shared_utils/src/quic/: client.rs  mod.rs  server.rs  transport.rs
shared_utils/src/tcp/: mod.rs
shared_utils/src/transport/: mod.rs
shared_utils/src/tunnel/: bootstrap.rs  config.rs  error.rs  manager.rs  mod.rs  types.rs
shared_utils/src/webtransport/: mod.rs
shared_utils/tests/: auth_negative.rs  config_tests.rs  e2e.rs  e2e_tests.rs  framing_property.rs  sim_transport.rs  tunnel_tests.rs
shared_utils/tests/shared_utils/tests/: quic_tls_negative.rs
src/: client.rs  config.rs  context.rs  lib.rs  logging.rs  main.rs  net.rs  observability.rs  packet_utils.rs  server.rs  tunnel.rs  utils.rs
src/crypto/: aes_gcm.rs  x25519.rs
tests/: aes_gcm_tests.rs  compression_tests.rs  config_tests.rs  e2e.rs  integration_tests.rs  observability_tests.rs  packet_utils_tests.rs  reliability_tests.rs  server_helper_integration.sh  test_helper_ipc.sh  tunnel_tests.rs
