[package]
name = "coentrovpn"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10"  # For AES-GCM encryption
socket2 = "0.5.9"
lz4 = "1.24.0"
zstd = "0.13.3"
num_cpus = {version = "1.13"}
tokio-console = "0.1.13"
tokio = { version = "1.44.1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.35", features = ["derive"] }
toml = "0.8" 