[package]
name = "coentro_client"
version = "0.1.0"
edition = "2021"
description = "Unprivileged client for CoentroVPN split daemon architecture"

[dependencies]
coentro_ipc = { path = "../coentro_ipc" }
shared_utils = { path = "../shared_utils" }
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
