[package]
name = "coentro_client"
version = "0.1.0"
edition = "2021"
description = "Unprivileged client for CoentroVPN split daemon architecture"

[dependencies]
coentro_ipc = { path = "../coentro_ipc" }
shared_utils = { path = "../shared_utils" }
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
tracing = "0.1"
sha2 = "0.10"
rustls-pemfile = "1.0"
rustls = "0.21.12"
metrics = "0.21"
metrics-exporter-prometheus = "0.14"
dirs = "5.0"

[features]
default = ["tun-metrics"]
# Gate TUN edge metrics so they can be disabled for minimal builds.
tun-metrics = []
