[package]
name = "coentro_ipc"
version = "0.1.0"
edition = "2021"
description = "IPC protocol for CoentroVPN split daemon architecture"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.28", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
nix = { version = "0.26", features = ["socket", "uio"] }
libc = "0.2"
regex = "1.8"
