[package]
name = "coentro_server_helper"
version = "0.1.0"
edition = "2021"
description = "Server-side privileged helper daemon for CoentroVPN"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
metrics-exporter-prometheus = "0.14"
nix = { version = "0.26", features = ["socket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_utils = { path = "../shared_utils" }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
bincode = "1.3"
async-trait = "0.1"
thiserror = "1.0"
libc = "0.2"
tun = { version = "0.5", features = ["async"] }
metrics = "0.21"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
