[package]
name = "coentroctl"
version = "0.1.0"
edition = "2021"
description = "Prototype admin CLI for CoentroVPN"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
shared_utils = { path = "../shared_utils" }
tokio = { version = "1.32.0", features = ["full"] }
