[package]
name = "core_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
shared_utils = { path = "../shared_utils" }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# QUIC protocol
quinn = "0.10.2"
sha2 = "0.10"
rustls-pemfile = "1.0"
rustls = "0.21.12"

# IP allocation & tooling
ipnet = "2.9"
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
coentro_server_helper = { path = "../coentro_server_helper" }

# Metrics exporter
metrics-exporter-prometheus = "0.14"

# Command-line argument parsing
clap = { version = "4.4.6", features = ["derive"] }
