[package]
name = "shared_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
# Binary data handling
byteorder = "1.5.0"

# Checksums
crc32fast = "1.3.2"

# QUIC transport
quinn = "0.10.2"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
rcgen = "0.11.3"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

# Error handling
thiserror = "2.0.12"

# Configuration
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }

# Filesystem
dirs = "5.0.1"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

[dev-dependencies]
# Testing
tempfile = "3.8.1"

[[example]]
name = "config_example"
path = "examples/config_example.rs"

[[example]]
name = "framing_test"
path = "examples/framing_test.rs"

[[example]]
name = "quic_example"
path = "examples/quic_example.rs"
