[package]
name = "shared_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
# Binary data handling
byteorder = "1.5.0"

# Checksums
crc32fast = "1.3.2"

# QUIC transport
quinn = "0.10.2"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
rcgen = "0.11.3"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
webpki-roots = "0.25"

# Error handling
thiserror = "2.0.12"
async-trait = "0.1.77" # For async traits

# Configuration
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }

# Cryptography
aes-gcm = "0.10.3" # For AES-GCM encryption
rand = "0.8.5"    # For nonce generation
sha2 = "0.10.8"   # For key derivation
hmac = "0.12"
bincode = "1.3"
anyhow = "1.0.79"  # For flexible error handling
uuid = { version = "1.4.1", features = ["v4"] } # For unique identifiers

# Filesystem
dirs = "5.0.1"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.1.4"

# URL parsing
url = "2.5.0"
hex = "0.4"
base64 = "0.22"
subtle = "2.6"

[features]
# Development-only insecure TLS verification on the client.
# Secure by default; enable explicitly in tests/examples: `--features insecure-tls`.
insecure-tls = []

[dev-dependencies]
# Testing
tempfile = "3.8.1"
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
bench = false # Or true, depending on whether you want to run benchmarks for the library itself

[[bench]]
name = "framing_benchmark"
harness = false

[[bench]]
name = "aes_gcm_benchmark"
harness = false

[[example]]
name = "config_example"
path = "examples/config_example.rs"

[[example]]
name = "framing_test"
path = "examples/framing_test.rs"

[[example]]
name = "quic_example"
path = "examples/quic_example.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
