[package]
name = "shared_utils-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shared_utils = { path = ".." }
# Enable quinn-proto's arbitrary feature so fuzz builds pull in the dependency.
quinn-proto = { version = "0.10.6", features = ["arbitrary"] }

[build-dependencies]
shared_utils = { path = ".." }

[profile.release]
debug = 1

[[bin]]
name = "framing"
path = "fuzz_targets/framing.rs"
test = false
doc = false
